--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,12 +28,8 @@ phf_codegen = { version = "0.11", optional = true }
 
 [build-dependencies]
 unicase = "2.7.0"
-
-#[build-dependencies.phf_codegen]
-#version = "0.7.24"
-#git = "https://github.com/sfackler/rust-phf"
-#path = "../rust-phf/phf_codegen"
-#optional = true
+phf = { version = "0.11", optional = true, features = ["unicase"] }
+phf_codegen = { version = "0.11", optional = true }
 
 [dev-dependencies]
 criterion = "0.5"
